@@ -4,6 +4,7 @@
   * 'Logo' support. Admins can add the URL of an image on the plugin
     configuration page. The logo will show up on the top-right corner
     of the first page of all exported PDFs. [closes #15]
+  * Converted settings page to fully-support localization. [closes #14]
 
 === 0.4.0 / 2011-06-18
 
